// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> test Should render Restart 1`] = `
<div
  className="restart-wrapper"
/>
`;

exports[`<Footer /> test Should render Restart and Result 1`] = `
<div
  className="footer"
>
  <Restart />
</div>
`;

exports[`<Footer /> test Should render Result 1`] = `
<div
  className="winner-wrapper"
/>
`;
